--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "moment": "^2.29.1",
+    "date-fns": "^2.28.0",
+    "date-fns-tz": "^1.3.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
