コード取得に ${{ github.repository }} を使ってみる

--- a/.github/workflows/openapi.yaml
+++ b/.github/workflows/openapi.yaml
@@ -14,8 +14,8 @@ jobs:
       matrix:
         node: ["12","14"]
     steps:
-      - name: checkout  # コードを取得するみたい？
-        uses: actions/checkout@feature/aopontann-github-actions
+      - name: checkout  
+        uses: actions/${{ github.repository }}@feature/aopontann-github-actions
 
       - name: node setting
         uses: actions/setup-node@v3
