--- a/.github/workflows/openapi.yaml
+++ b/.github/workflows/openapi.yaml
@@ -32,7 +32,7 @@ jobs:
         name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v0'
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
 
       - id: upload-file
         uses: google-github-actions/upload-cloud-storage@main
