pushイベントのブランチをdevelopに変更

--- a/.github/workflows/openapi.yaml
+++ b/.github/workflows/openapi.yaml
@@ -3,8 +3,7 @@ name: OpenAPI generate to html deploy for GCS
 on:
   push:
     branches:
-      # - master
-      - feature/aopontann-github-actions
+      - develop
   workflow_dispatch:
 
 jobs:
