--- a/.github/workflows/sample.yaml
+++ b/.github/workflows/sample.yaml
@@ -5,8 +5,7 @@ name: Action Sample
 on:
   push:
     branches:
-      # - master
-      - feature/aopontann-github-actions
+      - master # このワークフローはサンプル用であるため、存在しないブランチを指定して実行させないようにする
   workflow_dispatch:  #GitHub上で手動実行
 
 # 実行する処理内容や実行環境をjobs以降に記述する。なお、1つのYAMLファイルに複数のジョブを指定可能。原則として各ジョブは並列に実行されるが、依存関係（他のジョブの終了を待つ）を設定することも可能。
