--- a/api/qin-todo.yaml
+++ b/api/qin-todo.yaml
@@ -502,7 +502,9 @@ paths:
                 x-examples:
                   example-1:
                     error: string
-      description: ToDoを作成する
+      description: |-
+        ToDoを作成する
+        execution_dateにはUTCで"2020-12-25 00:00:00"形式を指定してください
       parameters:
         - schema:
             type: string
