--- a/web/package.json
+++ b/web/package.json
@@ -12,9 +12,11 @@
     "@mantine/core": "^4.1.1",
     "@mantine/hooks": "^4.1.1",
     "@mantine/next": "^4.1.1",
+    "@types/next-auth": "^3.15.0",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.0",
     "next": "12.1.0",
+    "next-auth": "^4.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
