--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,25 +1,23 @@
 FROM golang:1.17.9
 
-WORKDIR /workspace/backend
+WORKDIR /app
 
-COPY ../backend/go.mod ./
-COPY ../backend/go.sum ./
+COPY go.* ./
 
 RUN go mod download
 
 # DBマイグレーションツールのインストール
-# RUN go install github.com/pressly/goose/v3/cmd/goose@latest
+RUN go install github.com/pressly/goose/v3/cmd/goose@latest
 
 # Golang ホットリロードするためインストールする
 RUN go get -u github.com/cosmtrek/air
 
 # gitをインストール(vscodeの拡張機能「remote - Containers」を使って開発する場合)
-# RUN apk add git
-RUN apt-get install git
-
-COPY . /workspace
+# RUN apt-get install git
 
 # Goの拡張機能のインストール
 # vscode上でもインストールできるから書かなくてもいいかも
 # RUN go install -v golang.org/x/tools/gopls@latest
 # RUN go install -v github.com/ramya-rao-a/go-outline@latest
+
+COPY . ./
