--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   app:
     build:
       context: .
-      dockerfile: ./.devcontainer/Dockerfile
+      dockerfile: ./Dockerfile.dev
     # M1チップの場合コメント外す
     # platform: 'linux/amd64'
     container_name: app
@@ -11,13 +11,13 @@ services:
     tty: true
     # ホストPCとコンテナ内とのデータの同期
     volumes:
-      - ./backend:/app/
+      - ./:/app/
     ports:
       - 18080:8080
     depends_on:
       - db
     # 開発環境の起動
-    command: "air -c backend/.air.toml"
+    command: "air -c .air.toml"
 
   db: # qin-memo-backendのやつを参考にする
     image: mysql:5.7 # mysql:8.0でもいいかも
