--- a/web/package.json
+++ b/web/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -15,6 +15,8 @@
     "@types/next-auth": "^3.15.0",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.0",
+    "express": "^4.17.3",
+    "http-proxy-middleware": "^2.0.4",
     "next": "12.1.0",
     "next-auth": "^4.3.1",
     "react": "17.0.2",
