--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     depends_on:
       - db
     # 開発環境の起動
-    # command: "air -c .air.toml"
+    command: "air -c backend/.air.toml"
 
   db: # qin-memo-backendのやつを参考にする
     image: mysql:5.7 # mysql:8.0でもいいかも
